{
  "version": 4,
  "terraform_version": "1.9.8",
  "serial": 218,
  "lineage": "b597b335-6d25-39e6-1c7e-7eeb09b134f1",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "devops_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:471112690610:internet-gateway/igw-024b8c544c039d2c0",
            "id": "igw-024b8c544c039d2c0",
            "owner_id": "471112690610",
            "tags": {
              "Name": "devops_internet_gateway"
            },
            "tags_all": {
              "Name": "devops_internet_gateway"
            },
            "vpc_id": "vpc-09e0b0dd6f05aae05"
          },
          "dependencies": [
            "aws_vpc.devops"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "devops_alb_orders",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:471112690610:loadbalancer/app/devops-alb-orders/d4043459254b27f6",
            "arn_suffix": "app/devops-alb-orders/d4043459254b27f6",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "devops-alb-orders-257505270.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:471112690610:loadbalancer/app/devops-alb-orders/d4043459254b27f6",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "devops-alb-orders",
            "preserve_host_header": false,
            "security_groups": [
              "sg-04e29ecb2d4a0cbe4"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0e316729891d3de52"
              },
              {
                "subnet_id": "subnet-0f7b40b6482e8d07d"
              }
            ],
            "subnets": [
              "subnet-0e316729891d3de52",
              "subnet-0f7b40b6482e8d07d"
            ],
            "tags": {
              "Environment": "production"
            },
            "tags_all": {
              "Environment": "production"
            },
            "vpc_id": "vpc-09e0b0dd6f05aae05",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.security_group",
            "aws_subnet.us_east_1a_subnet",
            "aws_subnet.us_east_1b_subnet",
            "aws_vpc.devops"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "devops_alb_payments",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:471112690610:loadbalancer/app/devops-alb-payments/cc42f9720a2226ab",
            "arn_suffix": "app/devops-alb-payments/cc42f9720a2226ab",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "devops-alb-payments-1577719935.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:471112690610:loadbalancer/app/devops-alb-payments/cc42f9720a2226ab",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "devops-alb-payments",
            "preserve_host_header": false,
            "security_groups": [
              "sg-04e29ecb2d4a0cbe4"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0e316729891d3de52"
              },
              {
                "subnet_id": "subnet-0f7b40b6482e8d07d"
              }
            ],
            "subnets": [
              "subnet-0e316729891d3de52",
              "subnet-0f7b40b6482e8d07d"
            ],
            "tags": {
              "Environment": "production"
            },
            "tags_all": {
              "Environment": "production"
            },
            "vpc_id": "vpc-09e0b0dd6f05aae05",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.security_group",
            "aws_subnet.us_east_1a_subnet",
            "aws_subnet.us_east_1b_subnet",
            "aws_vpc.devops"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "devops_alb_products",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:471112690610:loadbalancer/app/devops-alb-products/459bdad53c8264d8",
            "arn_suffix": "app/devops-alb-products/459bdad53c8264d8",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "devops-alb-products-1869569047.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:471112690610:loadbalancer/app/devops-alb-products/459bdad53c8264d8",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "devops-alb-products",
            "preserve_host_header": false,
            "security_groups": [
              "sg-04e29ecb2d4a0cbe4"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0e316729891d3de52"
              },
              {
                "subnet_id": "subnet-0f7b40b6482e8d07d"
              }
            ],
            "subnets": [
              "subnet-0e316729891d3de52",
              "subnet-0f7b40b6482e8d07d"
            ],
            "tags": {
              "Environment": "production"
            },
            "tags_all": {
              "Environment": "production"
            },
            "vpc_id": "vpc-09e0b0dd6f05aae05",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.security_group",
            "aws_subnet.us_east_1a_subnet",
            "aws_subnet.us_east_1b_subnet",
            "aws_vpc.devops"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "devops_alb_shipping",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:471112690610:loadbalancer/app/devops-alb-shipping/4df187ecda01d1e1",
            "arn_suffix": "app/devops-alb-shipping/4df187ecda01d1e1",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "devops-alb-shipping-847821324.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:471112690610:loadbalancer/app/devops-alb-shipping/4df187ecda01d1e1",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "devops-alb-shipping",
            "preserve_host_header": false,
            "security_groups": [
              "sg-04e29ecb2d4a0cbe4"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0e316729891d3de52"
              },
              {
                "subnet_id": "subnet-0f7b40b6482e8d07d"
              }
            ],
            "subnets": [
              "subnet-0e316729891d3de52",
              "subnet-0f7b40b6482e8d07d"
            ],
            "tags": {
              "Environment": "production"
            },
            "tags_all": {
              "Environment": "production"
            },
            "vpc_id": "vpc-09e0b0dd6f05aae05",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.security_group",
            "aws_subnet.us_east_1a_subnet",
            "aws_subnet.us_east_1b_subnet",
            "aws_vpc.devops"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "devops_listener_orders",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:471112690610:listener/app/devops-alb-orders/d4043459254b27f6/30b8d23b525e5558",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:471112690610:targetgroup/devop-tg-orders/696cb6bfef9b90e8",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:471112690610:listener/app/devops-alb-orders/d4043459254b27f6/30b8d23b525e5558",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:471112690610:loadbalancer/app/devops-alb-orders/d4043459254b27f6",
            "mutual_authentication": [],
            "port": 8080,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.devops_alb_orders",
            "aws_lb_target_group.devops_tg_orders",
            "aws_security_group.security_group",
            "aws_subnet.us_east_1a_subnet",
            "aws_subnet.us_east_1b_subnet",
            "aws_vpc.devops"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "devops_listener_payments",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:471112690610:listener/app/devops-alb-payments/cc42f9720a2226ab/5ce9fd265ae21db4",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:471112690610:targetgroup/devop-tg-payments/8f2dc6550b94a257",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:471112690610:listener/app/devops-alb-payments/cc42f9720a2226ab/5ce9fd265ae21db4",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:471112690610:loadbalancer/app/devops-alb-payments/cc42f9720a2226ab",
            "mutual_authentication": [],
            "port": 8080,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.devops_alb_payments",
            "aws_lb_target_group.devops_tg_payments",
            "aws_security_group.security_group",
            "aws_subnet.us_east_1a_subnet",
            "aws_subnet.us_east_1b_subnet",
            "aws_vpc.devops"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "devops_listener_products",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:471112690610:listener/app/devops-alb-products/459bdad53c8264d8/8926b435b1ac5f40",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:471112690610:targetgroup/devop-tg-products/5b2ddc50f671afe6",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:471112690610:listener/app/devops-alb-products/459bdad53c8264d8/8926b435b1ac5f40",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:471112690610:loadbalancer/app/devops-alb-products/459bdad53c8264d8",
            "mutual_authentication": [],
            "port": 8080,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.devops_alb_products",
            "aws_lb_target_group.devops_tg_products",
            "aws_security_group.security_group",
            "aws_subnet.us_east_1a_subnet",
            "aws_subnet.us_east_1b_subnet",
            "aws_vpc.devops"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "devops_listener_shipping",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:471112690610:listener/app/devops-alb-shipping/4df187ecda01d1e1/ec5700f186b725f1",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:471112690610:targetgroup/devop-tg-shipping/9f8b5b36849706d2",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:471112690610:listener/app/devops-alb-shipping/4df187ecda01d1e1/ec5700f186b725f1",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:471112690610:loadbalancer/app/devops-alb-shipping/4df187ecda01d1e1",
            "mutual_authentication": [],
            "port": 8080,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.devops_alb_shipping",
            "aws_lb_target_group.devops_tg_shipping",
            "aws_security_group.security_group",
            "aws_subnet.us_east_1a_subnet",
            "aws_subnet.us_east_1b_subnet",
            "aws_vpc.devops"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "devops-orders-rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:471112690610:targetgroup/devop-tg-orders/696cb6bfef9b90e8",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:471112690610:listener-rule/app/devops-alb-orders/d4043459254b27f6/30b8d23b525e5558/749f371aaa662391",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/orders"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:471112690610:listener-rule/app/devops-alb-orders/d4043459254b27f6/30b8d23b525e5558/749f371aaa662391",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:471112690610:listener/app/devops-alb-orders/d4043459254b27f6/30b8d23b525e5558",
            "priority": 100,
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.devops_alb_orders",
            "aws_lb_listener.devops_listener_orders",
            "aws_lb_target_group.devops_tg_orders",
            "aws_security_group.security_group",
            "aws_subnet.us_east_1a_subnet",
            "aws_subnet.us_east_1b_subnet",
            "aws_vpc.devops"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "devops-payments-rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:471112690610:targetgroup/devop-tg-payments/8f2dc6550b94a257",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:471112690610:listener-rule/app/devops-alb-payments/cc42f9720a2226ab/5ce9fd265ae21db4/8575c8f1e22895f7",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/payments"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:471112690610:listener-rule/app/devops-alb-payments/cc42f9720a2226ab/5ce9fd265ae21db4/8575c8f1e22895f7",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:471112690610:listener/app/devops-alb-payments/cc42f9720a2226ab/5ce9fd265ae21db4",
            "priority": 100,
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.devops_alb_payments",
            "aws_lb_listener.devops_listener_payments",
            "aws_lb_target_group.devops_tg_payments",
            "aws_security_group.security_group",
            "aws_subnet.us_east_1a_subnet",
            "aws_subnet.us_east_1b_subnet",
            "aws_vpc.devops"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "devops-products-rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:471112690610:targetgroup/devop-tg-products/5b2ddc50f671afe6",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:471112690610:listener-rule/app/devops-alb-products/459bdad53c8264d8/8926b435b1ac5f40/e3e01cea084155f1",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/products"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:471112690610:listener-rule/app/devops-alb-products/459bdad53c8264d8/8926b435b1ac5f40/e3e01cea084155f1",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:471112690610:listener/app/devops-alb-products/459bdad53c8264d8/8926b435b1ac5f40",
            "priority": 100,
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.devops_alb_products",
            "aws_lb_listener.devops_listener_products",
            "aws_lb_target_group.devops_tg_products",
            "aws_security_group.security_group",
            "aws_subnet.us_east_1a_subnet",
            "aws_subnet.us_east_1b_subnet",
            "aws_vpc.devops"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "devops-shipping-rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:471112690610:targetgroup/devop-tg-shipping/9f8b5b36849706d2",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:471112690610:listener-rule/app/devops-alb-shipping/4df187ecda01d1e1/ec5700f186b725f1/b24d43888ce97b66",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/shipping/c"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:471112690610:listener-rule/app/devops-alb-shipping/4df187ecda01d1e1/ec5700f186b725f1/b24d43888ce97b66",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:471112690610:listener/app/devops-alb-shipping/4df187ecda01d1e1/ec5700f186b725f1",
            "priority": 100,
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.devops_alb_shipping",
            "aws_lb_listener.devops_listener_shipping",
            "aws_lb_target_group.devops_tg_shipping",
            "aws_security_group.security_group",
            "aws_subnet.us_east_1a_subnet",
            "aws_subnet.us_east_1b_subnet",
            "aws_vpc.devops"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "devops_tg_orders",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:471112690610:targetgroup/devop-tg-orders/696cb6bfef9b90e8",
            "arn_suffix": "targetgroup/devop-tg-orders/696cb6bfef9b90e8",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/orders",
                "port": "8080",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:471112690610:targetgroup/devop-tg-orders/696cb6bfef9b90e8",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:471112690610:loadbalancer/app/devops-alb-orders/d4043459254b27f6"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "devop-tg-orders",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-09e0b0dd6f05aae05"
          },
          "dependencies": [
            "aws_vpc.devops"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "devops_tg_payments",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:471112690610:targetgroup/devop-tg-payments/8f2dc6550b94a257",
            "arn_suffix": "targetgroup/devop-tg-payments/8f2dc6550b94a257",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/payments",
                "port": "8080",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:471112690610:targetgroup/devop-tg-payments/8f2dc6550b94a257",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:471112690610:loadbalancer/app/devops-alb-payments/cc42f9720a2226ab"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "devop-tg-payments",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-09e0b0dd6f05aae05"
          },
          "dependencies": [
            "aws_vpc.devops"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "devops_tg_products",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:471112690610:targetgroup/devop-tg-products/5b2ddc50f671afe6",
            "arn_suffix": "targetgroup/devop-tg-products/5b2ddc50f671afe6",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/products",
                "port": "8080",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:471112690610:targetgroup/devop-tg-products/5b2ddc50f671afe6",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:471112690610:loadbalancer/app/devops-alb-products/459bdad53c8264d8"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "devop-tg-products",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-09e0b0dd6f05aae05"
          },
          "dependencies": [
            "aws_vpc.devops"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "devops_tg_shipping",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:471112690610:targetgroup/devop-tg-shipping/9f8b5b36849706d2",
            "arn_suffix": "targetgroup/devop-tg-shipping/9f8b5b36849706d2",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/shipping/c",
                "port": "8080",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:471112690610:targetgroup/devop-tg-shipping/9f8b5b36849706d2",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:471112690610:loadbalancer/app/devops-alb-shipping/4df187ecda01d1e1"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "devop-tg-shipping",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-09e0b0dd6f05aae05"
          },
          "dependencies": [
            "aws_vpc.devops"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "devops_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:471112690610:route-table/rtb-04673d2c4d1d796d8",
            "id": "rtb-04673d2c4d1d796d8",
            "owner_id": "471112690610",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-024b8c544c039d2c0",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "devops_route_table"
            },
            "tags_all": {
              "Name": "devops_route_table"
            },
            "timeouts": null,
            "vpc_id": "vpc-09e0b0dd6f05aae05"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.devops_internet_gateway",
            "aws_vpc.devops"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "subnet-association-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-092ca1fa0e380def5",
            "route_table_id": "rtb-04673d2c4d1d796d8",
            "subnet_id": "subnet-0e316729891d3de52"
          },
          "dependencies": [
            "aws_internet_gateway.devops_internet_gateway",
            "aws_route_table.devops_route_table",
            "aws_subnet.us_east_1a_subnet",
            "aws_vpc.devops"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "subnet-association-b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0257677beed836c02",
            "route_table_id": "rtb-04673d2c4d1d796d8",
            "subnet_id": "subnet-0f7b40b6482e8d07d"
          },
          "dependencies": [
            "aws_internet_gateway.devops_internet_gateway",
            "aws_route_table.devops_route_table",
            "aws_subnet.us_east_1b_subnet",
            "aws_vpc.devops"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:471112690610:security-group/sg-04e29ecb2d4a0cbe4",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04e29ecb2d4a0cbe4",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "ecs-security-group",
            "name_prefix": "",
            "owner_id": "471112690610",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-09e0b0dd6f05aae05"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.devops"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "us_east_1a_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:471112690610:subnet/subnet-0e316729891d3de52",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e316729891d3de52",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "471112690610",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "us_east_1a_subnet"
            },
            "tags_all": {
              "Name": "us_east_1a_subnet"
            },
            "vpc_id": "vpc-09e0b0dd6f05aae05"
          },
          "dependencies": [
            "aws_vpc.devops"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "us_east_1b_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:471112690610:subnet/subnet-0f7b40b6482e8d07d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f7b40b6482e8d07d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "471112690610",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "us_east_1b_subnet"
            },
            "tags_all": {
              "Name": "us_east_1b_subnet"
            },
            "vpc_id": "vpc-09e0b0dd6f05aae05"
          },
          "dependencies": [
            "aws_vpc.devops"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "devops",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:471112690610:vpc/vpc-09e0b0dd6f05aae05",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-08a46d43a4d1cc7e6",
            "default_route_table_id": "rtb-0de4a3df3e7820196",
            "default_security_group_id": "sg-01befbf7edf005528",
            "dhcp_options_id": "dopt-08cdddb2e953ac59a",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-09e0b0dd6f05aae05",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0de4a3df3e7820196",
            "owner_id": "471112690610",
            "tags": {
              "Name": "devops"
            },
            "tags_all": {
              "Name": "devops"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}